squashed commits

pick c0d62f1b86ad initialize output parameter of ScFormatRangeStyles::GetStyleNameIndex()
pick 4bf58acd3a8e avoid repeated calls to ScMarkData::GetMarkedRanges() (tdf#148147)
pick 32bd68b14e44 allocate column in ScTable::FillSeries() when needed
pick 6c25b7b1ce63 allocate columns in ScTable::Compare()
pick 056da36a4f20 use ScTable::ColumnData() in ScDocument::ExtendOverlapped()
pick 442326b9c1e7 allocate columns for initDataRows()
pick b46a2a6c1817 handle xlsx with too large sheets the same way as e.g. ods
pick 7ea13bba8db9 don't clamp columns to allocated ones for flags
pick 34f4b09fa713 compress row height calculation (tdf#148492)

Change-Id: I2d466b1ef0343d5bf4087d94b4c7e9389bc52462