sc/source/core/data/table3.cxx
@@ -476,6 +476,7 @@ std::unique_ptr<ScSortInfoArray> ScTable::CreateSortInfoArray( const sc::Reorder
         pArray->SetKeepQuery(rParam.mbHiddenFiltered);
         pArray->SetUpdateRefs(rParam.mbUpdateRefs);
 
+        CreateColumnIfNotExists(nCol2);
         initDataRows( *pArray, *this, aCol, nCol1, nRow1, nCol2, nRow2, rParam.mbHiddenFiltered,
                 rParam.maDataAreaExtras.mbCellFormats, true, true, false);
     }
@@ -519,6 +520,7 @@ std::unique_ptr<ScSortInfoArray> ScTable::CreateSortInfoArray(
             }
         }
 
+        CreateColumnIfNotExists(rSortParam.nCol2);
         initDataRows( *pArray, *this, aCol, rSortParam.nCol1, nInd1, rSortParam.nCol2, nInd2, bKeepQuery,
                 rSortParam.aDataAreaExtras.mbCellFormats, true, true, false);
     }
@@ -906,6 +908,7 @@ void ScTable::SortReorderAreaExtrasByRow( ScSortInfoArray* pArray,
     for (SCCOL nCol = rDataAreaExtras.mnStartCol; nCol < nDataCol1; nCol += nChunkCols)
     {
         const SCCOL nEndCol = std::min<SCCOL>( nCol + nChunkCols - 1, nDataCol1 - 1);
+        CreateColumnIfNotExists(nEndCol);
         initDataRows( *pArray, *this, aCol, nCol, nRow1, nEndCol, nLastRow, false,
                 rDataAreaExtras.mbCellFormats, rDataAreaExtras.mbCellNotes, rDataAreaExtras.mbCellDrawObjects, true);
         SortReorderByRow( pArray, nCol, nEndCol, pProgress, true);
@@ -914,6 +917,7 @@ void ScTable::SortReorderAreaExtrasByRow( ScSortInfoArray* pArray,
     for (SCCOL nCol = nDataCol2 + 1; nCol <= rDataAreaExtras.mnEndCol; nCol += nChunkCols)
     {
         const SCCOL nEndCol = std::min<SCCOL>( nCol + nChunkCols - 1, rDataAreaExtras.mnEndCol);
+        CreateColumnIfNotExists(nEndCol);
         initDataRows( *pArray, *this, aCol, nCol, nRow1, nEndCol, nLastRow, false,
                 rDataAreaExtras.mbCellFormats, rDataAreaExtras.mbCellNotes, rDataAreaExtras.mbCellDrawObjects, true);
         SortReorderByRow( pArray, nCol, nEndCol, pProgress, true);
@@ -1736,6 +1740,7 @@ short ScTable::Compare(SCCOLROW nIndex1, SCCOLROW nIndex2) const
         do
         {
             SCCOL nCol = static_cast<SCCOL>(aSortParam.maKeyState[nSort].nField);
+            CreateColumnIfNotExists(nCol);
             ScRefCellValue aCell1 = aCol[nCol].GetCellValue(nIndex1);
             ScRefCellValue aCell2 = aCol[nCol].GetCellValue(nIndex2);
             nRes = CompareCell(nSort, aCell1, nCol, nIndex1, aCell2, nCol, nIndex2);
@@ -1743,6 +1748,7 @@ short ScTable::Compare(SCCOLROW nIndex1, SCCOLROW nIndex2) const
     }
     else
     {
+        CreateColumnIfNotExists(std::max(nIndex1, nIndex2));
         do
         {
             SCROW nRow = aSortParam.maKeyState[nSort].nField;
